# memory-first

./: .gitignore  README.md  pyproject.toml
memory_first/: input.css  manage.py  package-lock.json  package.json
memory_first/memory/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
memory_first/memory/migrations/: 0001_initial.py
memory_first/memory_first/: asgi.py  settings.py  urls.py  wsgi.py
memory_first/static/css/: output.css
memory_first/static/scripts/: game_script.js
memory_first/templates/: base.html
memory_first/templates/account/: login.html  logout.html  signup.html  signup_choice.html
memory_first/templates/cotton/badge/: index.html
memory_first/templates/dashboard/: carer_patient_detail.html  dashboard.html
memory_first/templates/memory/: game.html
memory_first/user/: admin.py  forms.py  middleware.py  models.py  signals.py  tests.py  urls.py  views.py
memory_first/user/management/commands/: seed_family_friends.py  startup_seed.py
memory_first/user/migrations/: 0001_initial.py  0002_carerprofile_patientprofile_familyfriend.py  0003_carerprofile_carer_profile_picture_and_more.py  0004_seedrunstate.py
