[project]
name = "memory-first"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "django>=6.0.2",
    "django-allauth>=65.14.3",
    "django-cloudinary-storage>=0.3.0",
    "django-cotton>=2.6.1",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
