[project]
name = "memory-first"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-allauth>=65.14.3",
    "django-cloudinary-storage>=0.3.0",
    "django-cotton>=2.6.1",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
